[gd_scene load_steps=2 format=3 uid="uid://bqm3uffhyqjqt"]

[ext_resource type="Script" uid="uid://cadawccuorvkf" path="res://material_maker/windows/accept_dialog/accept_dialog.gd" id="1"]

[node name="AcceptDialog" type="AcceptDialog"]
script = ExtResource("1")

[connection signal="canceled" from="." to="." method="_on_AcceptDialog_popup_hide"]
[connection signal="close_requested" from="." to="." method="_on_AcceptDialog_popup_hide"]
[connection signal="confirmed" from="." to="." method="_on_AcceptDialog_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_AcceptDialog_custom_action"]
